Primeira caixa de alimento

--- a/index.html
+++ b/index.html
@@ -4,12 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" sizes="192x192" href="midias\imagens\android-icon-192x192.png" />
+    <title>DrivenEats</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-    oi
-</body>
+
+    <body>
+        <div class="header">
+            <h1 class="titulo">DrivenEats</h1>
+            <p> Sua comida em 6 minutos</p>
+        </div>
+
+        <div class="corpo">
+            <h2 class="titulo">Primeiro, seu prato</h2>
+            <div class="container-lista-items">
+                <div class="lista-items">
+                    <div class="alimento-box">
+                        <img src="\midias\imagens\tradicional180.jpeg" alt="Tradicional 180g">
+                        <div class="descricao">
+                            <h3>Tradicional 180g</h3>
+                            <p>
+                                Pão brioche, 180g de hambúrguer corte nobre Angus recheado com cubos de muçarela, queijo cheddar, maionese da casa, alface americana, tomate, bacon norueguês, cebola puxada no azeite e molho garlic.
+                            </p>
+                            <h4>
+                                R$ 44,00
+                            </h4>
+                            <img src="midias\imagens\checkmark-circle 1.svg">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
