Todas seções de alimentos

--- a/index.html
+++ b/index.html
@@ -26,21 +26,188 @@
             <div class="container-lista-items">
                 <div class="lista-items">
                     <div class="alimento-box">
-                        <img src="\midias\imagens\tradicional180.jpeg" alt="Tradicional 180g">
+                        <img src="\midias\imagens\01tradicional180.jpeg" alt="Tradicional 180g">
                         <div class="descricao">
                             <h3>Tradicional 180g</h3>
                             <p>
                                 Pão brioche, 180g de hambúrguer corte nobre Angus recheado com cubos de muçarela, queijo cheddar, maionese da casa, alface americana, tomate, bacon norueguês, cebola puxada no azeite e molho garlic.
                             </p>
-                            <h4>
-                                R$ 44,00
-                            </h4>
-                            <img src="midias\imagens\checkmark-circle 1.svg">
+                            <h4>R$ 44,00</h4>
+                            <img src="midias\imagens\checkmark-circle 1.svg" class="sinalSelecionado">
+                        </div>
+                    </div>
+                    <div class="alimento-box">
+                        <img src="midias\imagens\02retro200.jpeg" alt="Retro 200g">
+                        <div class="descricao">
+                            <h3>Retro 200g</h3>
+                            <p>
+                                O "crocantíssimo!" acompanha maionese da casa, hambúrguer 200g, empanado e frito no panko com parmesão, alface americana, tomate, cebola empanada, bacon defumado, cheddar cremoso picante e molho garlic no pão de hambúrguer com gergelim.                            </p>
+                            <h4>R$ 45,00</h4>
+                            <img src="midias\imagens\checkmark-circle 1.svg" class="sinalSelecionado">
+                        </div>
+                    </div>
+                    <div class="alimento-box">
+                        <img src="midias\imagens\03carnívoro.jpeg" alt="Carnívoro">
+                        <div class="descricao">
+                            <h3>Carnívoro</h3>
+                            <p>
+                                Pão australiano à base de mel, 150g de muçarela empanada no panko e frita e 130g de blend bovino, pesto de tomate seco artesanal, manjericão fresco, cebola roxa e maionese caseira.                            </p>
+                            <h4>R$ 43,00</h4>
+                            <img src="midias\imagens\checkmark-circle 1.svg" class="sinalSelecionado">
+                        </div>
+                    </div>
+                    <div class="alimento-box">
+                        <img src="\midias\imagens\04queijoamilanesa.jpeg" alt="Queijo a milanesa">
+                        <div class="descricao">
+                            <h3>Queijo a milanesa</h3>
+                            <p>
+                                Pão australiano à base de mel, 150g de mussarela empanada no panko e frita, pesto de tomate seco artesanal, manjericão fresco, cebola roxa e maionese caseira.
+                            </p>
+                            <h4>R$ 32,00</h4>
+                            <img src="midias\imagens\checkmark-circle 1.svg" class="sinalSelecionado">
+                        </div>
+                    </div>
+                    <div class="alimento-box">
+                        <img src="\midias\imagens\05picanhapremium.jpeg" alt="Picanha premium">
+                        <div class="descricao">
+                            <h3>Picanha premium</h3>
+                            <p>
+                                Pão brioche com parmesão, hambúrguer de picanha Angus 180g., queijo estepe, molho garlic encorpado, bacon artesanal norueguês defumado e cebola reduzida no aceto balsâmico.
+                            </p>
+                            <h4>R$ 45,00</h4>
+                            <img src="midias\imagens\checkmark-circle 1.svg" class="sinalSelecionado">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <h2 class="titulo">Agora, sua bebida</h2>
+            <div class="container-lista-items">
+                <div class="lista-items">
+                    <div class="alimento-box">
+                        <img src="midias\imagens\06laranja.jpeg" alt="Suco de laranja">
+                        <div class="descricao">
+                            <h3>Suco de laranja</h3>
+                            <p>
+                                Suco natural da fruta, com gelo e açúcar (500ml)                            
+                            </p>
+                            <h4>R$ 14,00</h4>
+                            <img src="midias\imagens\checkmark-circle 1.svg" class="sinalSelecionado">
+                        </div>
+                    </div>
+                    <div class="alimento-box">
+                        <img src="midias\imagens\07abacaxihortela.jpeg" alt="Suco abacaxi hortela">
+                        <div class="descricao">
+                            <h3>Suco abacaxi hortela</h3>
+                            <p>
+                                Suco natural da fruta com hortelã, gelo e açúcar (500ml)                            
+                            </p>
+                            <h4>R$ 14,00</h4>
+                            <img src="midias\imagens\checkmark-circle 1.svg" class="sinalSelecionado">
+                        </div>
+                    </div>
+                    <div class="alimento-box">
+                        <img src="midias\imagens\08amora.jpeg" alt="Suco de amora">
+                        <div class="descricao">
+                            <h3>Suco de amora</h3>
+                            <p>
+                                Suco da polpa da fruta, com gelo e açúcar (500ml)
+                            </p>
+                            <h4>R$ 15,00</h4>
+                            <img src="midias\imagens\checkmark-circle 1.svg" class="sinalSelecionado">
+                        </div>
+                    </div>
+                    <div class="alimento-box">
+                        <img src="midias\imagens\09framboesa.jpg" alt="Suco de framboesa">
+                        <div class="descricao">
+                            <h3>Suco de framboesa</h3>
+                            <p>
+                                Suco da polpa da fruta, com gelo e açúcar (500ml)
+                            </p>
+                            <h4>R$ 15,00</h4>
+                            <img src="midias\imagens\checkmark-circle 1.svg" class="sinalSelecionado">
+                        </div>
+                    </div>
+                    <div class="alimento-box">
+                        <img src="midias\imagens\10acerola.jpeg" alt="Suco de acerola">
+                        <div class="descricao">
+                            <h3>Suco de acerola</h3>
+                            <p>
+                                Suco da polpa da fruta, com gelo e açúcar (500ml)
+                            </p>
+                            <h4>R$ 15,00</h4>
+                            <img src="midias\imagens\checkmark-circle 1.svg" class="sinalSelecionado">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <h2 class="titulo">Por fim, sua sobremesa</h2>
+            <div class="container-lista-items">
+                <div class="lista-items">
+                    <div class="alimento-box">
+                        <img src="midias\imagens\11torta.jpeg" alt="Torta mousse tres chocolates">
+                        <div class="descricao">
+                            <h3>Torta mousse três chocolates</h3>
+                            <p>
+                                Uma Contraste De Sabores Em Uma Torta Mousse Feita Com Cocholates Meio Amargo, Ao Leite E Branco. Decorada Com Calda De Nutella E Blossom De Chocolate.
+                            </p>
+                            <h4>R$ 41,00</h4>
+                            <img src="midias\imagens\checkmark-circle 1.svg" class="sinalSelecionado">
+                        </div>
+                    </div>
+                    <div class="alimento-box">
+                        <img src="midias\imagens\12suavecito.jpeg" alt="Suavecito">
+                        <div class="descricao">
+                            <h3>Suavecito</h3>
+                            <p>
+                                Brigadeiro de Ninho com creme trufado e merengue de limão, pedaços frescos de morango e base de biscoito triturado.                           
+                            </p>
+                            <h4>R$ 22,00</h4>
+                            <img src="midias\imagens\checkmark-circle 1.svg" class="sinalSelecionado">
+                        </div>
+                    </div>
+                    <div class="alimento-box">
+                        <img src="midias\imagens\13brownie.jpeg" alt="Brownie c brigadeiro">
+                        <div class="descricao">
+                            <h3>Brownie c brigadeiro</h3>
+                            <p>
+                                Brownie caseiro com gotas de chocolate belga, coberto com muita calda de brigadeiro de Ninho e morango.
+                            </p>
+                            <h4>R$ 27,00</h4>
+                            <img src="midias\imagens\checkmark-circle 1.svg" class="sinalSelecionado">
+                        </div>
+                    </div>
+                    <div class="alimento-box">
+                        <img src="midias\imagens\14cheescake.jpeg" alt="Cheesecake de chocolate branco">
+                        <div class="descricao">
+                            <h3>Cheesecake de chocolate branco</h3>
+                            <p>
+                                Cheesecake de chocolate branco com uma deliciosa calda de frutas vermelhas e morangos frescos!
+                            </p>
+                            <h4>R$ 41,00</h4>
+                            <img src="midias\imagens\checkmark-circle 1.svg" class="sinalSelecionado">
+                        </div>
+                    </div>
+                    <div class="alimento-box">
+                        <img src="midias\imagens\15gelato.jpeg" alt="Gelato de brownie">
+                        <div class="descricao">
+                            <h3>Gelato de brownie</h3>
+                            <p>
+                                Brownie artesanal com sorvete cremoso de baunilha, brigadeiro de chocolate belga, brigadeiro de Ninho, morangos frescos e cobertos por chantilly.
+                            </p>
+                            <h4>R$ 36,00</h4>
+                            <img src="midias\imagens\checkmark-circle 1.svg" class="sinalSelecionado">
                         </div>
                     </div>
 
                 </div>
             </div>
         </div>
+
+      
+
+
+        <script src="script.js"></script> 
     </body>
 </html>
