Seleciona um por secão. Botão de fechar pedido ativa corretamente

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h2 class="titulo">Primeiro, seu prato</h2>
       <div class="container-lista-items comida">
         <div class="lista-items">
-          <div class="alimento-box" onclick="selecionar(this)">
+          <div class="alimento-box" onclick="selecionarClasse(this)">
             <img
               src="\midias\imagens\01tradicional180.jpeg"
               alt="Tradicional 180g"
@@ -48,7 +48,7 @@
               />
             </div>
           </div>
-          <div class="alimento-box" onclick="selecionar(this)">
+          <div class="alimento-box" onclick="selecionarClasse(this)">
             <img src="midias\imagens\02retro200.jpeg" alt="Retro 200g" />
             <div class="descricao">
               <h3>Retro 200g</h3>
@@ -65,7 +65,7 @@
               />
             </div>
           </div>
-          <div class="alimento-box" onclick="selecionar(this)">
+          <div class="alimento-box" onclick="selecionarClasse(this)">
             <img src="midias\imagens\03carnívoro.jpeg" alt="Carnívoro" />
             <div class="descricao">
               <h3>Carnívoro</h3>
@@ -81,7 +81,7 @@
               />
             </div>
           </div>
-          <div class="alimento-box" onclick="selecionar(this)">
+          <div class="alimento-box" onclick="selecionarClasse(this)">
             <img
               src="\midias\imagens\04queijoamilanesa.jpeg"
               alt="Queijo a milanesa"
@@ -100,7 +100,7 @@
               />
             </div>
           </div>
-          <div class="alimento-box" onclick="selecionar(this)">
+          <div class="alimento-box" onclick="selecionarClasse(this)">
             <img
               src="\midias\imagens\05picanhapremium.jpeg"
               alt="Picanha premium"
@@ -125,7 +125,7 @@
       <h2 class="titulo">Agora, sua bebida</h2>
       <div class="container-lista-items bebida">
         <div class="lista-items">
-          <div class="alimento-box" onclick="selecionar(this)">
+          <div class="alimento-box" onclick="selecionarClasse(this)">
             <img src="midias\imagens\06laranja.jpeg" alt="Suco de laranja" />
             <div class="descricao">
               <h3>Suco de laranja</h3>
@@ -139,7 +139,7 @@
               />
             </div>
           </div>
-          <div class="alimento-box" onclick="selecionar(this)">
+          <div class="alimento-box" onclick="selecionarClasse(this)">
             <img
               src="midias\imagens\07abacaxihortela.jpeg"
               alt="Suco abacaxi hortela"
@@ -156,7 +156,7 @@
               />
             </div>
           </div>
-          <div class="alimento-box" onclick="selecionar(this)">
+          <div class="alimento-box" onclick="selecionarClasse(this)">
             <img src="midias\imagens\08amora.jpeg" alt="Suco de amora" />
             <div class="descricao">
               <h3>Suco de amora</h3>
@@ -170,7 +170,7 @@
               />
             </div>
           </div>
-          <div class="alimento-box" onclick="selecionar(this)">
+          <div class="alimento-box" onclick="selecionarClasse(this)">
             <img src="midias\imagens\09framboesa.jpg" alt="Suco de framboesa" />
             <div class="descricao">
               <h3>Suco de framboesa</h3>
@@ -184,7 +184,7 @@
               />
             </div>
           </div>
-          <div class="alimento-box" onclick="selecionar(this)">
+          <div class="alimento-box" onclick="selecionarClasse(this)">
             <img src="midias\imagens\10acerola.jpeg" alt="Suco de acerola" />
             <div class="descricao">
               <h3>Suco de acerola</h3>
@@ -204,7 +204,7 @@
       <h2 class="titulo">Por fim, sua sobremesa</h2>
       <div class="container-lista-items sobremesa">
         <div class="lista-items">
-          <div class="alimento-box">
+          <div class="alimento-box" onclick="selecionarClasse(this)">
             <img
               src="midias\imagens\11torta.jpeg"
               alt="Torta mousse tres chocolates"
@@ -219,11 +219,11 @@
               <h4>R$ 41,00</h4>
               <img
                 src="midias\imagens\checkmark-circle 1.svg"
-                class="sinalSelecionado"
+                class="sinalSelecionado hidden"
               />
             </div>
           </div>
-          <div class="alimento-box">
+          <div class="alimento-box" onclick="selecionarClasse(this)">
             <img src="midias\imagens\12suavecito.jpeg" alt="Suavecito" />
             <div class="descricao">
               <h3>Suavecito</h3>
@@ -234,11 +234,11 @@
               <h4>R$ 22,00</h4>
               <img
                 src="midias\imagens\checkmark-circle 1.svg"
-                class="sinalSelecionado"
+                class="sinalSelecionado hidden"
               />
             </div>
           </div>
-          <div class="alimento-box">
+          <div class="alimento-box" onclick="selecionarClasse(this)">
             <img
               src="midias\imagens\13brownie.jpeg"
               alt="Brownie c brigadeiro"
@@ -252,11 +252,11 @@
               <h4>R$ 27,00</h4>
               <img
                 src="midias\imagens\checkmark-circle 1.svg"
-                class="sinalSelecionado"
+                class="sinalSelecionado hidden"
               />
             </div>
           </div>
-          <div class="alimento-box">
+          <div class="alimento-box" onclick="selecionarClasse(this)">
             <img
               src="midias\imagens\14cheescake.jpeg"
               alt="Cheesecake de chocolate branco"
@@ -270,11 +270,11 @@
               <h4>R$ 41,00</h4>
               <img
                 src="midias\imagens\checkmark-circle 1.svg"
-                class="sinalSelecionado"
+                class="sinalSelecionado hidden"
               />
             </div>
           </div>
-          <div class="alimento-box">
+          <div class="alimento-box" onclick="selecionarClasse(this)">
             <img src="midias\imagens\15gelato.jpeg" alt="Gelato de brownie" />
             <div class="descricao">
               <h3>Gelato de brownie</h3>
@@ -286,7 +286,7 @@
               <h4>R$ 36,00</h4>
               <img
                 src="midias\imagens\checkmark-circle 1.svg"
-                class="sinalSelecionado"
+                class="sinalSelecionado hidden"
               />
             </div>
           </div>
