Integração com WhatsApp

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                 <p class="valorTotal"></p>
             </div>
             <div class="confirma-pedido-botoes">
-                <div class="botao-confirma">
+                <div class="botao-confirma" onclick="confirmaPedido()">
                     Tudo certo, pode pedir!
                 </div>
                 <div class="botao-cancela" onclick="cancelarPedido()">
