Comentários adicionados ao código.

--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
   </head>
 
   <body>
-
+    <!-- Topo da página -->
     <div class="header">
       <h1 class="titulo">DrivenEats</h1>
       <p>Sua comida em 6 minutos</p>
     </div>
 
+    <!-- Estrutura que contém as comidas -->
     <div class="corpo">
       <h2 class="titulo">Primeiro, seu prato</h2>
       <div class="container-lista-items comida">
@@ -295,6 +296,7 @@
       </div>
     </div>
 
+    <!-- Botão inferior para finalizar pedido -->
     <div class="bottom-bar">
       <div class="bar-gray" onclick="finalizarPedido()">
         <p>
@@ -304,6 +306,7 @@
       </div>
     </div>
 
+    <!-- Aba de confirmação de pedido -->
     <div class="confirma-pedido hidden">
         <div class="confirma-pedido-box">
             <h3>Confirme seu pedido</h3>
